--- a/app/src/main/res/drawable/circle_progressbar.xml
+++ b/app/src/main/res/drawable/circle_progressbar.xml
@@ -8,7 +8,7 @@
             android:shape="ring"
             android:useLevel="false"
             android:type="sweep">
-            <solid android:color="@color/purple_500"/>
+<!--            <solid android:color="@color/purple_500"/>-->
         </shape>
     </item>
 
@@ -22,7 +22,7 @@
                 android:shape="ring"
                 android:angle="0"
                 android:type="sweep">
-                <solid android:color="@color/red_orange_500" />
+<!--                <solid android:color="@color/red_orange_500" />-->
             </shape>
         </rotate>
     </item>
