--- a/app/src/main/res/drawable/horizon_progressbar.xml
+++ b/app/src/main/res/drawable/horizon_progressbar.xml
@@ -3,13 +3,13 @@
     <item
         android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="@color/red_orange_500"/>
+<!--            <solid android:color="@color/red_orange_500"/>-->
         </shape>
     </item>
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <solid android:color="@color/purple_500"/>
+<!--                <solid android:color="@color/purple_500"/>-->
             </shape>
         </clip>
     </item>
