--- a/app/src/main/res/layout/fragment_fixture_detail.xml
+++ b/app/src/main/res/layout/fragment_fixture_detail.xml
@@ -56,7 +56,7 @@
                         tools:text="Manchester City" />
 
                     <TextView
-                        android:id="@+id/matchElapsed"
+                        android:id="@+id/match_status"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1.35"
@@ -1015,6 +1015,7 @@
                 android:layout_height="25dp"
                 android:indeterminate="false"
                 android:paddingHorizontal="40dp"
+                android:layout_marginBottom="40dp"
                 android:progress="40"
                 android:progressDrawable="@drawable/horizon_progressbar" />
 
