--- a/app/src/main/res/layout/fragment_fixture_detail.xml
+++ b/app/src/main/res/layout/fragment_fixture_detail.xml
@@ -1020,6 +1020,29 @@
                 android:progressDrawable="@drawable/horizon_progressbar" />
 
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/home_lineup_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:textAlignment="center"
+                android:text="원정팀"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/purple_700"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/away_lineup_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+
+
+
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
