--- a/app/src/main/res/layout/fragment_fixture_detail.xml
+++ b/app/src/main/res/layout/fragment_fixture_detail.xml
@@ -1095,10 +1095,11 @@
                     android:layout_centerVertical="true"
                     android:elevation="0dp"
                     android:src="@drawable/stadium_halfline"
-                    app:layout_constraintBottom_toBottomOf="parent"
+
+                    app:layout_constraintBottom_toTopOf="@id/away_lineup_recyclerView"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/home_lineup_recyclerView" />
 
                 <ImageView
                     android:layout_width="100dp"
@@ -1106,10 +1107,10 @@
                     android:layout_centerInParent="true"
                     android:elevation="0dp"
                     android:src="@drawable/stadium_halfline_circle"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/halfline"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/halfline" />
 
                 <!--    Away team Goal-Line    -->
                 <ImageView
