--- a/app/src/main/res/layout/lineup_col_recycler_item.xml
+++ b/app/src/main/res/layout/lineup_col_recycler_item.xml
@@ -4,18 +4,22 @@
     android:layout_width="80dp"
     android:layout_height="100dp"
     android:orientation="vertical"
+    android:layout_weight="1"
     android:gravity="center">
 
     <ImageView
         android:id="@+id/player_imageview"
-        android:layout_width="80dp"
-        android:layout_height="80dp"/>
+        android:background="@drawable/player_face_bg_circle"
+        android:scaleType="centerInside"
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
     <TextView
         android:id="@+id/player_name_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="1"
         android:ellipsize="end"
+        android:textColor="@color/white"
         tools:text="Wan-Bissaca"/>
 
 
