--- a/app/src/main/res/layout/lineup_col_recycler_item.xml
+++ b/app/src/main/res/layout/lineup_col_recycler_item.xml
@@ -1,26 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="80dp"
-    android:layout_height="100dp"
+    android:layout_height="98dp"
     android:orientation="vertical"
-    android:layout_weight="1"
-    android:gravity="center">
+    android:layout_weight="1">
 
     <ImageView
         android:id="@+id/player_imageview"
-        android:background="@drawable/player_face_bg_circle"
-        android:scaleType="centerInside"
         android:layout_width="60dp"
-        android:layout_height="60dp"/>
+        android:layout_height="60dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/player_face_bg_circle"
+        android:scaleType="centerInside" />
+
     <TextView
-        android:id="@+id/player_name_textview"
+        android:id="@+id/player_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:ellipsize="end"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="3dp"
+        android:background="@drawable/player_rating_bg_circle"
+        android:elevation="1dp"
+        android:textAlignment="center"
         android:textColor="@color/white"
-        tools:text="Wan-Bissaca"/>
+        tools:text="6.5" />
+
+    <TextView
+        android:id="@+id/player_number_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/player_name_textview"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/gray_300"
+        tools:text="7" />
+
+    <TextView
+        android:id="@+id/player_name_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        tools:text="Wan-Bissaca"
+        tools:textColor="@color/black" />
 
 
-</LinearLayout>
+</RelativeLayout>
