--- a/app/src/main/res/layout/lineup_row_recycler_item.xml
+++ b/app/src/main/res/layout/lineup_row_recycler_item.xml
@@ -10,6 +10,7 @@
         android:id="@+id/row_recyclerview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         />
