--- a/app/src/main/res/layout/fragment_fixture_detail_lineup.xml
+++ b/app/src/main/res/layout/fragment_fixture_detail_lineup.xml
@@ -1,13 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FixtureDetailLineupFragment">
-
-    <TextView
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:background="@color/stadium_field">
 
-</FrameLayout>
+        <LinearLayout
+            android:id="@+id/hometeam_formation"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/stadium_line"
+            android:gravity="center|start"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/hometeam_lineup_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                tools:text="Manchester City" />
+
+            <TextView
+                android:id="@+id/hometeam_formation_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:textColor="@color/team_formation"
+                tools:text="4-3-3" />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/home_lineup_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="3dp"
+            app:layout_constraintBottom_toTopOf="@id/away_lineup_recyclerView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hometeam_formation"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/away_lineup_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="3dp"
+            app:layout_constraintBottom_toTopOf="@id/awayteam_formation"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/home_lineup_recyclerView" />
+
+        <LinearLayout
+            android:id="@+id/awayteam_formation"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/stadium_line"
+            android:gravity="center|start"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <TextView
+                android:id="@+id/awayteam_lineup_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                tools:text="Liverpool" />
+
+            <TextView
+                android:id="@+id/awayteam_formation_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:textColor="@color/team_formation"
+                tools:text="4-3-3" />
+
+        </LinearLayout>
+
+        <!--    draw field line    -->
+        <!--    Home team Goal-Line    -->
+        <ImageView
+            android:id="@+id/home_penalty_inbox"
+            android:layout_width="133dp"
+            android:layout_height="40dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:elevation="2dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/stadium_home_penalty_area_in"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hometeam_formation" />
+
+        <ImageView
+            android:id="@+id/home_penalty_outbox"
+            android:layout_width="293dp"
+            android:layout_height="120dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:background="@color/stadium_field"
+            android:elevation="1dp"
+            android:src="@drawable/stadium_home_penalty_area_out"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hometeam_formation" />
+
+        <ImageView
+            android:id="@+id/home_penalty_arc"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_below="@id/home_penalty_inbox"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/stadium_penalty_area_arc"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/home_penalty_inbox" />
+
+
+        <ImageView
+            android:id="@+id/halfline"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_centerVertical="true"
+            android:elevation="0dp"
+            android:src="@drawable/stadium_halfline"
+
+            app:layout_constraintBottom_toTopOf="@id/away_lineup_recyclerView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/home_lineup_recyclerView" />
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerInParent="true"
+            android:elevation="0dp"
+            android:src="@drawable/stadium_halfline_circle"
+            app:layout_constraintBottom_toTopOf="@id/halfline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/halfline" />
+
+        <!--    Away team Goal-Line    -->
+        <ImageView
+            android:id="@+id/away_penalty_inbox"
+            android:layout_width="133dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:elevation="2dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/stadium_away_penalty_area_in"
+            app:layout_constraintBottom_toTopOf="@id/awayteam_formation"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/away_penalty_outbox"
+            android:layout_width="293dp"
+            android:layout_height="120dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="@color/stadium_field"
+            android:elevation="1dp"
+            android:src="@drawable/stadium_away_penalty_area_out"
+            app:layout_constraintBottom_toTopOf="@id/awayteam_formation"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageView
+            android:id="@+id/away_penalty_arc"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_above="@id/away_penalty_inbox"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:elevation="0dp"
+            android:src="@drawable/stadium_penalty_area_arc"
+            app:layout_constraintBottom_toTopOf="@id/away_penalty_inbox"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
